# nadir

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: NadirConfig.cmake.in
docs/doxygen/: Doxyfile
docs/html/: abstract__classes_8h.html  abstract__classes_8h__dep__incl.map  abstract__classes_8h__dep__incl.md5  abstract__classes_8h__incl.map  abstract__classes_8h__incl.md5  abstract__classes_8h_source.html  adam_8h.html  adam_8h__dep__incl.map  adam_8h__dep__incl.md5  adam_8h__incl.map  adam_8h__incl.md5  adam_8h_source.html  annotated.html  classes.html  classnadir_1_1Adam-members.html  classnadir_1_1Adam.html  classnadir_1_1AdamCostFunction-members.html  classnadir_1_1AdamCostFunction.html  classnadir_1_1AdamIterCallback-members.html  classnadir_1_1AdamIterCallback.html  classnadir_1_1NadirCostFunction-members.html  classnadir_1_1NadirCostFunction.html  classnadir_1_1NadirIterCallback-members.html  classnadir_1_1NadirIterCallback.html  dir_782adc0a54da861ae559289486795a4d.html  dir_782adc0a54da861ae559289486795a4d_dep.map  dir_782adc0a54da861ae559289486795a4d_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  nadir_8h.html  nadir_8h__incl.map  nadir_8h__incl.md5  nadir_8h_source.html  structnadir_1_1Adam_1_1MetaParameters-members.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
docs/latex/: abstract__classes_8h.tex  abstract__classes_8h__dep__incl.md5  abstract__classes_8h__incl.md5  abstract__classes_8h_source.tex  adam_8h.tex  adam_8h__dep__incl.md5  adam_8h__incl.md5  adam_8h_source.tex  annotated.tex  classnadir_1_1Adam.tex  classnadir_1_1AdamCostFunction.tex  classnadir_1_1AdamIterCallback.tex  classnadir_1_1NadirCostFunction.tex  classnadir_1_1NadirIterCallback.tex  files.tex  index.tex  nadir_8h.tex  nadir_8h__incl.md5  nadir_8h_source.tex  refman.tex  structnadir_1_1Adam_1_1MetaParameters.tex
inc/nadir/: abstract_classes.h  acx_simulated_annealing.h  adam.h  bfgs.h  chain_minimizers.h  cma-es.h  context_simulated_annealing.h  csx_simulated_annealing.h  differential_evolution.h  itx_simulated_annealing.h  lamb.h  levenberg_marquardt.h  minimizer.h  nadir.h  nex_simulated_annealing.h  ran2.h  scx_simulated_annealing.h  shampoo.h  simulated_annealing.h  soaa.h  tadam.h  tlx_simulated_annealing.h
inc/nadir/sim_ann/: acx_simulated_annealing.h  csx_simulated_annealing.h  itx_simulated_annealing.h  nex_simulated_annealing.h  scx_simulated_annealing.h  tlx_simulated_annealing.h
src/: adam.cc  bfgs.cc  chain_minimizers.cc  cma-es.cc  differential_evolution.cc  lamb.cc  lbfgs.cc  levenberg_marquardt.cc  ran2.cc  ran2.cpp  shampoo.cc  simulated_annealing.cc  soaa.cc  tadam.cc
tests/: CMakeLists.txt  all_tests.cc  bench_suite.h  default.cc  test_LM.cc  test_annealing.cc  test_bfgs.cc  test_cma-es.cc  test_diff_evo.cc  test_jso.cc  test_shampoo.cc  test_soaa.cc  test_tadam.cc
